@@ -1,3 +1,10 @@
+linuxmuster-linbo (2.4.2-3) lmn7; urgency=low
+
+  * fix #161: Explicit start.conf parameter for "linbo-remote mode", part 2.
+  * improved behaviour of some linbo-remote options.
+
+ -- Thomas Schmitt <thomas@linuxmuster.net>  Sat, 30 Jan 2021 17:04:28 +0100
+
 linuxmuster-linbo (2.4.2-2) lmn7; urgency=low
 
   * fix #161: Explicit start.conf parameter for "linbo-remote mode".
